packages/documents/documents.less
// set body background
.myDocuments, .companyDocuments {
  background: white;
  // Fix leftnav margin
  .documents {
    margin-left: 0;
  }

  // left side background color 100% height
  .leftside {
    background: #f1f4f8;
    padding-bottom: 100%;
    margin-bottom: -100%;
  }

  // new folder and upload file options
  .options {
    border-bottom: 2px solid #ededed;
    display: block;
    padding: 90px 0 30px;
    a {
      padding-left: 20px
    }
    .folder {
      color: #a4a0df;
    }
    .upload {
      color: #5bb8d7;
    }
  }

  //table
  .table > tbody > tr > td {
    padding: 30px 8px;
    color: #78838e;
  }
  table {
    margin: 60px 2% 2%;
    // overwrite width for now. this should be looked at again.
    width: 95%;
    a.name {
      color: #78838e;
    }
    .type {
      text-transform: uppercase;
    }
    i.pdf {
      color: #5bb8d7;
    }
    /*** custom stars for favorites ***/
    .favoriteCheckbox {
      /* to hide the checkbox */
      input[type=checkbox] {
        display:none;
      }
      input[type=checkbox] + label:before {
        font-family: FontAwesome;
        display: inline-block;
      }
      /* unchecked icon */
      input[type=checkbox] + label:before {
        content: "\f006";
        color: #d6ddea;
      }
      /* space between checkbox and label */
      input[type=checkbox] + label:before {
        letter-spacing: 10px;
      }
      /* checked icon */
      input[type=checkbox]:checked + label:before {
        content: "\f005";
        color: #ffb685;
      }
      /* allow space for check mark */
      input[type=checkbox]:checked + label:before {
        letter-spacing: 5px;
      }
    }
    .btn-default {
      color: #74cfce;
      border: 0 none;
      text-transform: uppercase;
      letter-spacing: 2px;
    }
    .btn-default:hover, .btn-default:focus, .btn-default.focus,
    .btn-default:active, .btn-default.active,
    .open .dropdown-toggle.btn-default {
      color: #74cfce;
      background: none;
      border-color: none;
      box-shadow: none;
      -webkit-box-shadow: none;
    }
    .dropdown-menu {
      background: #f4fafa;
      box-shadow: none;
      border-color: #d9e4ee;
      -webkit-box-shadow: none;
      text-transform: uppercase;
      letter-spacing: 2px;
      a {
        color: #78838e;
      }
      i {
        color: #74cfce;
        padding-right: 5px;
      }
    }
    .btn-group.open .dropdown-toggle {
      -webkit-box-shadow: none;
      box-shadow: none;
    }
  }
}

